--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <link rel="stylesheet" href="styles.css">
     <title>Aluraflix</title>
 </head>
+
 <body>
     <header>ALURAFLIX</header>
+
     <section>
         <div>
+        <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
         </div>
+
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
                 title="YouTube video player" frameborder="0"
@@ -17,5 +21,5 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
 </body>
-</html>
